examples/bad/type.mw
var x [int] = [];
x = [1, 2];
x = ["A"];
